--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "ngx-weui": "^1.2.2",
     "rxjs": "^5.5.6",
     "we7-router": "^1.3.0",
     "zone.js": "^0.8.19"
