--- a/package.json
+++ b/package.json
@@ -22,10 +22,22 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@delon/abc": "^0.7.1",
+    "@delon/acl": "^0.7.1",
+    "@delon/auth": "^0.7.1",
+    "@delon/cache": "^0.7.1",
+    "@delon/mock": "^0.7.1",
+    "@delon/theme": "^0.7.1",
     "core-js": "^2.4.1",
+    "file-saver": "^1.3.3",
+    "font-awesome": "^4.7.0",
     "meepo-themes": "^1.0.7",
+    "ng-zorro-antd": "^0.6.15",
+    "ng-zorro-antd-extra": "^1.1.7",
+    "ngx-countdown": "^2.0.4",
     "ngx-weui": "^1.2.2",
     "rxjs": "^5.5.6",
+    "simple-line-icons": "^2.4.1",
     "we7-router": "^1.3.0",
     "zone.js": "^0.8.19"
   },
@@ -33,6 +45,7 @@
     "@angular/cli": "~1.7.0",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
+    "@delon/cli": "^0.7.1",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
