--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "git": "git add . && git commit -m 'update to save' && git push origin master"
+    "git": "git add . && git commit -m 'update to save' && git push origin master",
+    "we7": "ng build --prod --deploy-url=../addons/shibida_mfans/template/mobile/"
   },
   "private": true,
   "dependencies": {
@@ -36,8 +37,10 @@
     "ng-zorro-antd-extra": "^1.1.7",
     "ngx-countdown": "^2.0.4",
     "ngx-weui": "^1.2.2",
+    "qrcode": "^1.2.0",
     "rxjs": "^5.5.6",
     "simple-line-icons": "^2.4.1",
+    "swiper": "^4.1.6",
     "we7-router": "^1.3.0",
     "zone.js": "^0.8.19"
   },
